# jabber

./: .gitignore  .justfile  .tokeignore  README.md  WORKPLAN.md  grammar-20240712.md  grammar-20240820.ungram  note-20240905.md
.zed/: settings.json
compiler/: Cargo.toml  build.rs
compiler/core/: Cargo.toml  build.rs
compiler/core/src/: ast.rs  cst.rs  env.rs  file.rs  lib.rs  literal.rs  package.rs  parser.rs  resolve.rs  source_file.rs  span.rs  symbol.rs  ty.rs  unique.rs
compiler/core/src/ast/: attr.rs  bound.rs  common.rs  typed.rs  unbound.rs  unbound_lowered.rs
compiler/core/src/env/: import_res.rs  resolve.rs  typed.rs  unbound.rs
compiler/core/src/env/typed/: lower.rs
compiler/core/src/package/: interface.rs  loader.rs  metadata.rs
compiler/src/: cli.rs  codegen.rs  driver.rs  env.rs  lib.rs  main.rs  package.rs  span.rs  symbol.rs
compiler/src/ast/: attr.rs  bound.rs  typed.rs
compiler/src/codegen/: blame.rs  lower.rs  repr.rs  scm.rs
compiler/src/env/: import_res.rs  resolve.rs  typed.rs  unbound.rs
compiler/src/env/typed/: lower.rs
compiler/src/package/: interface.rs  loader.rs
grammar-prototype/: Cargo.toml  build.rs
grammar-prototype/src/: ast.rs  main.rs  prototype.lalrpop
initial-designs/: anonymous-functions.md  compiler-architecture.md  julian-interfaces.md  nullary-functions.md  sketch-20240806.md
libs/core/: jabber.toml
notes/: grammar-20240712.md  grammar-20240820.ungram  note-20240922.md  note-20240925.md  note-20241002.md  note-20241004.md  note-20241006.md  note-20241008.md  note-20241009.md  note-20241020.md  note-20241022.md  note-20241030.md  note-20241031.md  note-20241108.md  note-20241110.md  note-20241111.md  note-20241115.md  note-20241227.md  sketch-20240801.md  sketch-20240802.md
notes/initial-designs/: higher-ranked-polymorphism.md  work-plan.md
ocaml_prototype/_build/: .db  .digest-db  log
ocaml_prototype/lib/: dune
prototype3/: Cargo.toml
prototype3/src/: main.rs  span.rs  token.rs
prototypes/ocaml_prototype/: dune-project
prototypes/prototype3/: Cargo.toml
report/: EBNF.sublime-syntax  README.md  glossary.typ  main.typ  references.bib
spec/: comments.ebnf  jabber.ebnf  numbers.ebnf  types.md
support/: support.rkt  support.scm
tests/btrees/: jabber.toml
tests/complex/: jabber.toml
tests/hello_world/: jabber.toml
tests/imp/: jabber.toml
tree-sitter-jabber/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.jabber  example.jbr  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-jabber/queries/: comments.scm  highlights.scm  locals.scm
tree-sitter-jabber/src/: grammar.json  node-types.json  parser.c
trees-that-grow/: Cargo.toml
trees-that-grow/src/: main.rs
(+82 files in other folders)
