[package]
name = "jabber"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ena = "0.14.3"
petgraph = "0.8.1"
pretty = "0.12.4"
recursion = "0.5.2"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
string-interner = { version = "0.18.0", features = ["std", "inline-more", "backends"] }
thiserror = "1.0.64"
toml = "0.8.19"
tree-sitter-jabber = { path = "../tree-sitter-jabber"}
type-sitter = { version = "0.5.0", default-features = false }
which = "7.0.3"
winnow = "0.6.20"

[build-dependencies]
cc = "*"
type-sitter-gen = "0.5.0"
