[package]
name = "jabber_core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.64"
tree-sitter = "0.23.2"
tree-sitter-jabber = { path = "../../tree-sitter-jabber"}
type-sitter = { git = "https://github.com/Jakobeha/type-sitter", rev = "4a037e6", default-features = false }

[build-dependencies]
cc = "*"
type-sitter-gen = { git = "https://github.com/Jakobeha/type-sitter", rev = "4a037e6"}
