[package]
name = "jabber_core"
version = "0.1.0"
edition = "2021"

[dependencies]
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
string-interner = { version = "0.18.0", features = ["std", "inline-more", "backends"] }
thiserror = "1.0.64"
toml = "0.8.19"
tree-sitter-jabber = { path = "../../tree-sitter-jabber"}
type-sitter = { version = "0.5.0", default-features = false }

[build-dependencies]
cc = "*"
type-sitter-gen = "0.5.0"
